--- a/index.html
+++ b/index.html
@@ -1,68 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./images/favicon-32x32.png"
+        />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Services
-  Projects
-  Contact
+        <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-  We are creatives
+        <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+        <style>
+            .attribution {
+                font-size: 11px;
+                text-align: center;
+            }
+            .attribution a {
+                color: hsl(228, 45%, 44%);
+            }
+        </style>
+        <link rel="stylesheet" href="./CSS/styles.css" />
+    </head>
+    <body>
+        <main>
+            <section id="section-1">
+                <header>
+                    <nav>
+                        <img src="./images/logo.svg" alt="Logo" />
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Projects</a></li>
+                            <li><a href="#">Contact </a></li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="header-content">
+                    <h1>We are creatives</h1>
+                    <img
+                        src="./images/icon-arrow-down.svg"
+                        alt="icon-arrow-down"
+                    />
+                </div>
+            </section>
 
-  Transform your brand
+            <section id="section-2">
+                <aside>
+                    <h2>Transform your brand</h2>
+                    <p>
+                        We are a full-service creative agency specializing in
+                        helping brands grow fast. Engage your clients through
+                        compelling visuals that do most of the marketing for
+                        you.
+                    </p>
+                    <a href="#">Learn more</a>
+                </aside>
+                <aside></aside>
+            </section>
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+            <section id="section-3">
+                <aside></aside>
+                <aside>
+                    <h2>Stand out to the right audience</h2>
+                    <p>
+                        We are a full-service creative agency specializing in
+                        helping brands grow fast. Engage your clients through
+                        compelling visuals that do most of the marketing for
+                        you.Using a collaborative formula of designers,
+                        researchers, photographers, videographers, and
+                        copywriters, we'll build and extend your brand in
+                        digital places.
+                    </p>
+                    <a href="#">Learn more</a>
+                </aside>
+            </section>
 
-  Learn more
+            <section id="section-4">
+                <article>
+                    <h3>Graphic design</h3>
+                    <p>
+                        Great design makes you memorable. We deliver artwork
+                        that underscores your brand message and captures
+                        potential client's attention.
+                    </p>
+                </article>
+                <article>
+                    <h3>Photography</h3>
+                    <p>
+                        Increase your credibility by getting the most stunning,
+                        high-quality photos that improve your business image.
+                    </p>
+                </article>
+            </section>
 
-  Stand out to the right audience
+            <section id="section-5">
+                <h3>Client testimonials</h3>
+                <div>
+                    <img src="./images/image-emily.jpg" alt="image-emily" />
+                    <p>
+                        We put our trust in Sunnyside and they delivered, making
+                        sure our needs were met and deadlines were always hit.
+                    </p>
+                    <h4>Emily R. <span>Marketing Director</span></h4>
+                </div>
+                <div>
+                    <img src="./images/image-jennie.jpg" alt="image-jennie" />
+                    <p>
+                        Sunnyside's enthusiasm coupled with their keen interest
+                        in our brand's success made it a satisfying and
+                        enjoyable experience.
+                    </p>
+                    <h4>Thomas S. <span>Chief Operating Officer</span></h4>
+                </div>
+                <div>
+                    <img src="./images/image-thomas.jpg" alt="image-thomas" />
+                    <p>
+                        Incredible end result! Our sales increased over 400%
+                        when we worked with Sunnyside. Highly recommended!
+                    </p>
+                    <h4>Jennie F. <span>Business Owner</span></h4>
+                </div>
+            </section>
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+            <section id="section-6">
+                <img
+                    src="./images/desktop/image-gallery-milkbottles.jpg"
+                    alt="image-gallery-milkbottles"
+                /><img
+                    src="./images/desktop/image-gallery-orange.jpg"
+                    alt="image-gallery-orange"
+                /><img
+                    src="./images/desktop/image-gallery-cone.jpg"
+                    alt="image-gallery-cone"
+                /><img
+                    src="./images/desktop/image-gallery-sugarcubes.jpg"
+                    alt="image-gallery-sugarcubes"
+                />
+            </section>
+            <section id="section-7">
+                <nav>
+                    <img src="./images/logo.svg" alt="Logo" />
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Projects</a></li>
+                    </ul>
+                    <img src="./images/icon-facebook.svg" alt="icon-facebook" />
+                    <img
+                        src="./images/icon-instagram.svg"
+                        alt="icon-instagram"
+                    />
+                    <img
+                        src="./images/icon-pinterest.svg"
+                        alt="icon-pinterest"
+                    />
+                    <img src="./images/icon-twitter.svg" alt="icon-twitter" />
+                </nav>
+            </section>
+        </main>
 
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <footer>
+            <div class="attribution">
+                Challenge by
+                <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank"
+                    >Frontend Mentor</a
+                >. Coded by <a href="#">Razal Kabeer</a>.
+            </div>
+        </footer>
+    </body>
 </html>
